Fix header and footer on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -32,7 +32,7 @@ header {
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	padding: 10px;
+	padding: 10px 0;
 	padding: auto;
 	position: sticky;
 	width: 100%;
@@ -197,7 +197,7 @@ footer {
 	justify-content: center;
 	align-items: center;
 	background-color: var(--color1);
-	margin: 10px 0 0 0;
+	margin: 0;
 	width: 100%;
 }
 
